<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/puzzle"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/loupe"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_editProfile"
            android:icon="@drawable/user"
            android:title="@string/menu_edit" />

        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/messenger"
            android:title="@string/menu_message" />
        <item
            android:id="@+id/nav_availability"
            android:icon="@drawable/calendar"
            android:title="@string/menu_availability"
             />

    </group>
</menu>